# elt_project

./: .env  .env.example  .gitignore  Dockerfile.Airflow  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
Streamlit/: Dockerfile.Streamlit  pyproject.toml
Streamlit/visualization/: dashboard.py
dags/: elt_pipeline.py  init_elt_pipeline.py  init_tables_in_database.py  init_warehouse.py  load_history.py  run_streamlit.py
data/: historical_bitcoin.db
docker/airflow/: Dockerfile
docker/streamlit/: Dockerfile
scripts/: extractor.py  fetch_all_assets.py  initialize_warehouse.py  logger_config.py  one_asset_retrive.py  test.py  test_last_load.py
scripts/elt_pipeline.egg-info/: PKG-INFO  SOURCES.txt
src/: auth.py  extractor.py  fetch_all_assets.py  init_minio.py  initialize_warehouse.py  logger_config.py  test.py
tests/: test_minio_conn.py
visualization/: dashboard.py
