[tool.poetry]
name = "Dashboard"
version = "0.1.0"
description = ""
authors = ["Weronika Podyma"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.14.0"
plotly = "5.9.0"
pandas = "2.2.3"
duckdb = "1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
