[tool.poetry]
name = "Dashboard"
version = "0.1.0"
description = ""
authors = ["Weronika Podyma"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.45.0"
pandas = "2.2.3"
duckdb = "1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
